# simulated_data_for_fcds_scale_rl

./: .gitignore  CLAUDE.md  Makefile  README.md  _quarto.yml  paper.docx  paper.html  paper.qmd  pyproject.toml  reference-doc.docx  references.bib
_freeze/paper/execute-results/: docx.json  html.json
src/simulated_data_for_fcds_scale_rl/: __init__.py
