[project]
name = "simulated-data-for-fcds-scale-rl"
version = "0.1.0"
requires-python = ">=3.10,<3.12"   # pseudopeople supports 3.10–3.11
dependencies = [
    "pseudopeople",
    "duckdb",
    "splink>=4",
    "pandas>=2.2,<3",  # pseudopeople 1.2.8 relies on pandas 2.x NumPy-backed strings; pandas 3's default string dtype breaks noise generation
    "pyarrow",
    "pyyaml",
]

[dependency-groups]
dev = [
    "pytest",
    "quarto-cli>=1.9.38",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simulated_data_for_fcds_scale_rl"]
